--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,14 +1,31 @@
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
+
+set -g default-terminal "screen-256color"
+set -as terminal-features ",xterm-256color:RGB"
 
 # set -g prefix C-s
 
 set -g mouse on
 
+# move between panes
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+# Resize panes
+bind -n C-k resize-pane -U 5
+bind -n C-j resize-pane -D 5
+bind -n C-h resize-pane -L 5
+bind -n C-l resize-pane -R 5
+
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 
 set-option -g status-position top
 
@@ -35,6 +52,8 @@ set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+# set to current directroy name
+set -g @catppuccin_directory_text "#(basename #{pane_current_path})"
+
 
 run '~/.tmux/plugins/tpm/tpm'
