--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,17 +9,13 @@ set -as terminal-features ",xterm-256color:RGB"
 set -g mouse on
 
 # move between panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+bind-key h resize-pane -L 5
+bind-key j resize-pane -D 5
+bind-key k resize-pane -U 5
+bind-key l resize-pane -R 5
 
-# Resize panes
-bind -n C-k resize-pane -U 5
-bind -n C-j resize-pane -D 5
-bind -n C-h resize-pane -L 5
-bind -n C-l resize-pane -R 5
-
+# Kill session on bind key + S (capital S)
+bind S kill-session
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
@@ -31,6 +27,7 @@ set-option -g status-position top
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 
 
