--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,11 +8,14 @@ set -as terminal-features ",xterm-256color:RGB"
 
 set -g mouse on
 
-# move between panes
+# resize panes 
 bind-key h resize-pane -L 5
 bind-key j resize-pane -D 5
 bind-key k resize-pane -U 5
 bind-key l resize-pane -R 5
+
+# clear screen
+bind C-l send-keys 'C-l'
 
 # Kill session on bind key + S (capital S)
 bind S kill-session
